[gd_scene load_steps=4 format=3 uid="uid://b5i3kst7shrd2"]

[ext_resource type="Script" path="res://interfaces/user_interfaces/settings_interface.gd" id="1_0acah"]
[ext_resource type="PackedScene" uid="uid://b2uhanojuhssd" path="res://interfaces/widgets/header.tscn" id="2_13sxb"]
[ext_resource type="PackedScene" uid="uid://dta0kmj3jy7n3" path="res://interfaces/user_interfaces/settings.tscn" id="3_4mlrv"]

[node name="SettingsInterface" type="VBoxContainer"]
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_0acah")

[node name="Header" parent="." instance=ExtResource("2_13sxb")]
layout_mode = 2
title = "TEXT_SETTINGS"

[node name="settings" parent="." instance=ExtResource("3_4mlrv")]
layout_mode = 2
size_flags_stretch_ratio = 9.0

[connection signal="back_request" from="Header" to="." method="_on_header_back_request"]
[connection signal="applied" from="settings" to="." method="_on_settings_applied"]
[connection signal="canceled" from="settings" to="." method="_on_settings_canceled"]
[connection signal="confirmed" from="settings" to="." method="_on_settings_confirmed"]
